# pubsubClient

./: LICENSE  dune-project  midiClient.opam
_build/: .db  .digest-db  log
_build/default/: midiClient.dune-package  midiClient.install  midiClient.opam
_build/default/cardio-folder/: cardio_crumble.dune-package  cardio_crumble.install
_build/default/cardio-folder/test/.cardio_crumble.eobjs/byte/: dune__exe__Cardio_crumble.cmi  dune__exe__Cardio_crumble.cmti
_build/default/cardio-folder/test/.cardio_crumble.eobjs/native/: dune__exe__Cardio_crumble.cmx
_build/default/cardio-folder/test/.merlin-conf/: exe-cardio_crumble
_build/default/cardio-folder/test_executable/.main.eobjs/byte/: dune__exe__Main.cmti
_build/default/cardio-folder/test_executable/.merlin-conf/: exe-main
_build/default/lib/: midiClient.cma  midiClient.cmxa  midiClient.cmxs
_build/default/lib/.merlin-conf/: lib-midiClient
_build/default/lib/.midiClient.objs/byte/: midiClient.cmi  midiClient.cmo  midiClient.cmt
_build/default/lib/.midiClient.objs/native/: midiClient.cmx
_build/default/test/.merlin-conf/: exe-midiClient
_build/default/test/.midiClient.eobjs/byte/: dune__exe__MidiClient.cmi  dune__exe__MidiClient.cmti
_build/default/test/.midiClient.eobjs/native/: dune__exe__MidiClient.cmx
_build/install/default/doc/cardio_crumble/: LICENSE.md  README.md
_build/install/default/lib/cardio_crumble/: META  dune-package  opam
_build/install/default/lib/midiClient/: META  dune-package  opam
lib/: dune
test/: dune
(+1 files in other folders)
